# zyphyr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: vector_bench.rs
src/: error.rs  lib.rs
src/tests/: vector_tests.rs
src/utils/: alignment.rs  mod.rs
src/vector/: collection.rs  distance.rs  mod.rs  vector.rs  vector_aligned.rs
