[package]
name = "zyphyr"
version = "0.1.0"
edition = "2024"
authors = ["Vivek Jmai <j.vivekvamsi@gmail.com>"]
description = "High-performance vector database with HNSW indexing"
repository = "https://github.com/vivekjami/zyphyr"
license = "MIT"


[dependencies]
thiserror = "2.0.12" # For error handling
memmap2 = "0.9.7"  # For memory-mapped files (future use)
serde = { version = "1.0", features = ["derive"], optional = true } # For serialization (optional for now)

[dev-dependencies]
criterion = "0.7.0" # For benchmarking
rand = "0.9.2"     # For test data generation

[[bench]]
name = "vector_bench"
harness = false