[package]
name = "zyphyr"
version = "0.1.0"
edition = "2024"
authors = ["Vivek Jmai <j.vivekvamsi@gmail.com>"]
description = "High-performance vector database with HNSW indexing"
repository = "https://github.com/vivekjami/zyphyr"
license = "MIT"


[dependencies]
thiserror = "2.0.12" # For error handling
memmap2 = "0.9.7"  # For memory-mapped files (future use)
serde = { version = "1.0", features = ["derive"], optional = true } # For serialization (optional for now)
aligned-vec = "0.6.4"
rayon = "1.8"  # For parallel processing
once_cell = "1.19"  # For runtime feature detection

[dev-dependencies]
criterion = "0.7.0" # For benchmarking
rand = "0.9.2"     # For test data generation

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.5.0"  # For SIMD feature detection

[[bench]]
name = "vector_bench"
harness = false